@@ -1,3 +1,9 @@
+2006-06-25  Benoît Dejean  <benoit@placenet.org>
+
+	* src/procactions.c (renice): 
+	
+	Make sure the table is not updated during renice.
+
 2006-06-22  Benoît Dejean  <benoit@placenet.org>
 
 	* src/gnome-system-monitor.schemas.in:
